--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ kramdown:
 owner:
   name: Stinger Games
   avatar: bio-photo.jpg
-  bio: "Indie mobile game developer."
+  bio: "Independent mobile<br>game developer."
   email: contact@stingergames.com
   disqus-shortname: 
   twitter: StingerGames
